plugins {
    id 'java'
    id 'jacoco'
}

group = 'ru.nsu.bondar'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain{
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}